// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Price should not show the fractional part if it's zero. 1`] = `
<div
  className="price"
>
  <span>
    99
  </span>
  <span
    className="price__currency"
  >
    € 
  </span>
</div>
`;

exports[`Price should prepend the currency symbol when necessary. 1`] = `
<div
  className="price"
>
  <div
    className="price__pre"
  >
    <span
      className="price__currency"
    >
      $ 
    </span>
  </div>
  <span>
    9
  </span>
  <span
    className="price__fractional"
  >
    .99
  </span>
</div>
`;

exports[`Price should render a regular price by default. 1`] = `
<div
  className="price"
>
  <span>
    9
  </span>
  <span
    className="price__fractional"
  >
    ,99
  </span>
  <span
    className="price__currency"
  >
    € 
  </span>
</div>
`;

exports[`Price should render an asterisk when hasDisclaimer is truthy. 1`] = `
<div
  className="price"
>
  <span>
    9
  </span>
  <span
    className="price__fractional"
  >
    ,99
  </span>
  <span
    className="price__currency"
  >
    € 
  </span>
  <span>
    *
  </span>
</div>
`;

exports[`Price should render installments when they are > 1. 1`] = `
<div
  className="price"
>
  <div
    className="price__pre price__pre--installments"
  >
    <span
      className="price__small-text"
    >
      9×
    </span>
  </div>
  <span>
    9
  </span>
  <span
    className="price__fractional"
  >
    ,99
  </span>
  <span
    className="price__currency"
  >
    € 
  </span>
</div>
`;
